<resources>
    <string name="app_name">TripOrganizer</string>
    <string name="form_title">Title</string>
    <string name="form_description">Description</string>
    <string name="form_date">Date</string>
    <string name="form_time">Time</string>
    <string name="form_address">Address</string>
    <string name="form_visited">Visited</string>
    <string name="hint_title">Trip title</string>
    <string name="hint_description">Trip description</string>
    <string name="hint_date">Date of the trip</string>
    <string name="hint_time">Time of the trip</string>
    <string name="hint_address">Address of the trip</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="empty_list">Nothing to see here</string>
    <string name="settings_lang">Language</string>
    <string name="settings_en">English</string>
    <string name="settings_fr">French</string>
    <string name="sample_text">SampleText</string>
    <string name="settings_notification">Reminder</string>
    <string name="settings_1w">1 week before</string>
    <string name="settings_2w">2 weeks before</string>
    <string name="settings_3w">3 weeks before</string>
    <string name="hint_phone">Phone Number</string>
    <string name="form_phone">Phone</string>
</resources>
