<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="201dp"
        android:layout_height="99dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLanguagerRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_lang" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:onClick="onLanguageRadioButtonClick"
            android:text="@string/settings_en" />

        <RadioButton
            android:id="@+id/rbFrench"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:onClick="onLanguageRadioButtonClick"
            android:text="@string/settings_fr" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="201dp"
        android:layout_height="194dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="274dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLanguage">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification" />

        <RadioButton
            android:id="@+id/rbOneWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onReminderRadioButtonClick"
            android:text="@string/settings_1w" />

        <RadioButton
            android:id="@+id/rbTwoWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onReminderRadioButtonClick"
            android:text="@string/settings_2w" />

        <RadioButton
            android:id="@+id/rbThreeWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onReminderRadioButtonClick"
            android:text="@string/settings_3w" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>